# maplestorage_backend

./: .coverage  .gitignore  README.md  db.sqlite3-journal  docs.md  generate_fixtures.py  issue.md  jwt_test.md  main.py  manage.py  possible_bug.md  pyproject.toml  pytest.ini  requirements.txt  test_inventory_crawl.py  test_item_detail_real.py  test_ranking_debug.py  test_real_crawl.py  test_storage_crawl.py  test_storage_debug.py  test_storage_debug2.py  todo.md
.cursor/: mcp.json
.cursor/rules/: project-rule.mdc
accounts/: admin.py  apps.py  exceptions.py  models.py  notifications.py  schemas.py  serializers.py  services.py  signals.py  tasks.py  tests.py  views.py
accounts/migrations/: 0001_initial.py  0002_maplestoryapikey.py  0003_remove_account_characters_account_user_and_more.py  0004_alter_character_account_alter_character_ocid.py  0005_alter_maplestoryapikey_user.py  0006_alter_character_character_class_and_more.py  0007_userprofile.py  0008_character_created_at_character_user_and_more.py  0009_crawltask.py  0010_alter_crawltask_character_basic.py  0011_add_error_type_and_technical_error_to_crawltask.py
accounts/tests/: test_notification_service.py  test_notification_views.py
characters/: admin.py  crawler_services.py  exceptions.py  mixins.py  models.py  schemas.py  serializers.py  services.py  tasks.py  tests.py  urls.py  utils.py  views.py
characters/migrations/: 0001_initial.py  (+44 more)
define/: define.py
maplestorage_backend/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
test/: views.py
util/: rate_limiter.py  redis_client.py  util.py
(+33 files in other folders)
